# studio

./: .env.example  .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  run-dev.sh  tailwind.config.js
.idx/: dev.nix
.next/: trace
.next/cache/: .rscinfo
.next/server/: server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: page.js  page_client-reference-manifest.js
.next/static/chunks/: _08783698._.js  _08783698._.js.map  _c550043c._.js  _c550043c._.js.map  node_modules_7f65944c._.js  node_modules_7f65944c._.js.map  node_modules_d94f6561._.js  node_modules_d94f6561._.js.map  src_69557d30._.js  src_69557d30._.js.map  src_app_globals_b805903d.css  src_app_globals_b805903d.css.map  src_app_login_page_tsx_dff01d90._.js  src_app_page_tsx_dff01d90._.js  src_app_teacher_dashboard_layout_tsx_dff01d90._.js  src_app_teacher_dashboard_page_tsx_079f5628._.js  src_components_5c7c98d4._.js  src_components_5c7c98d4._.js.map
app/: config.py  database.py  main.py  models.py
app/routers/: auth.py  sessions.py  student.py  teacher.py
app/schemas/: auth.py  sessions.py  student.py
app/static/css/: input.css  output.css  tailwind.config.js
app/templates/components/: header.html
app/templates/layouts/: base.html
app/templates/pages/: home.html  login.html  signup.html
docs/: blueprint.md
src/ai/: dev.ts
src/ai/flows/: generate-incentive.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/login/: page.tsx
src/components/shared/: Header.tsx  Logo.tsx  (+1 more)
src/lib/: data.ts  placeholder-images.json  types.ts
(+53 files in other folders)
